--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "backend2-segunda-entrega",
   "version": "1.0.0",
   "description": "segunda entrega curso backend 2",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/app.js --mongo",
+    "dev:memory": "nodemon ./src/app.js --memory"
   },
+  "keywords": [],
   "author": "mariano garcia",
   "license": "ISC",
   "dependencies": {
